--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${API_GATEWAY_PORT:8080}
 
 spring:
   application:
@@ -8,13 +8,15 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: true
+          enabled: false
       globalcors:
         corsConfigurations:
           "[/**]":
             allowedOrigins:
               - "http://localhost:4200"
               - "http://localhost"
+              - "http://ijp.example.com"
+              - "https://ijp.example.com"
             allowedMethods:
               - GET
               - POST
@@ -27,30 +29,25 @@ spring:
             maxAge: 3600
       routes:
         - id: login-service
-          uri: lb://LOGIN-SERVICE
+          uri: ${LOGIN_SERVICE_URI:http://localhost:8081}
           predicates:
             - Path=/api/auth/**
         - id: hr-service
-          uri: lb://HR-SERVICE
+          uri: ${HR_SERVICE_URI:http://localhost:8082}
           predicates:
             - Path=/api/hr/**
         - id: job-service
-          uri: lb://JOB-SERVICE
+          uri: ${JOB_SERVICE_URI:http://localhost:8083}
           predicates:
             - Path=/api/jobs/**
         - id: candidate-service
-          uri: lb://CANDIDATE-SERVICE
+          uri: ${CANDIDATE_SERVICE_URI:http://localhost:8084}
           predicates:
             - Path=/api/candidates/**
         - id: employee-service
-          uri: lb://EMPLOYEE-SERVICE
+          uri: ${EMPLOYEE_SERVICE_URI:http://localhost:8085}
           predicates:
             - Path=/api/employees/**
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
 
 management:
   endpoints:
