--- a/candidate-service-prod.yml
+++ b/candidate-service-prod.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:candidate_db}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${CANDIDATE_DB_NAME:candidate_db}
     username: ${POSTGRES_USERNAME:postgres}
     password: ${POSTGRES_PASSWORD:root}
