--- a/candidate-service.yml
+++ b/candidate-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${CANDIDATE_SERVICE_PORT:8084}
 
 spring:
   application:
@@ -9,13 +9,6 @@ spring:
       ddl-auto: update
   kafka:
     bootstrap-servers: kafka:9092
-
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
 
 management:
   endpoints:
