--- a/employee-service-prod.yml
+++ b/employee-service-prod.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:employee_db}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${EMPLOYEE_DB_NAME:employee_db}
     username: ${POSTGRES_USERNAME:postgres}
     password: ${POSTGRES_PASSWORD:root}
