--- a/employee-service.yml
+++ b/employee-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${EMPLOYEE_SERVICE_PORT:8085}
 
 spring:
   application:
@@ -7,13 +7,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
 
 management:
   endpoints:
