--- a/hr-service-prod.yml
+++ b/hr-service-prod.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:hr_db}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${HR_DB_NAME:hr_db}
     username: ${POSTGRES_USERNAME:postgres}
     password: ${POSTGRES_PASSWORD:root}
