--- a/hr-service.yml
+++ b/hr-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${HR_SERVICE_PORT:8082}
 
 spring:
   application:
@@ -14,13 +14,6 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
 
 management:
   endpoints:
