--- a/job-service-prod.yml
+++ b/job-service-prod.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:job_db}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${JOB_DB_NAME:job_db}
     username: ${POSTGRES_USERNAME:postgres}
     password: ${POSTGRES_PASSWORD:root}
