--- a/login-service.yml
+++ b/login-service.yml
@@ -1,16 +1,18 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${LOGIN_SERVICE_PORT:8081}
 
 spring:
   application:
     name: login-service
-
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
+  cloud:
+    discovery:
+      client:
+        simple:
+          instances:
+            hr-service:
+              - uri: ${HR_SERVICE_URI:http://localhost:8082}
+            employee-service:
+              - uri: ${EMPLOYEE_SERVICE_URI:http://localhost:8085}
 
 management:
   endpoints:
@@ -19,4 +21,4 @@ management:
         include: "*"
 
 jwt:
-  expiration: ${JWT_EXPIRATION:86400000} # 24 hours
+  expiration: ${JWT_EXPIRATION:86400000}
