--- a/candidate-service.yml
+++ b/candidate-service.yml
@@ -8,7 +8,10 @@ spring:
     hibernate:
       ddl-auto: update
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 management:
   endpoints:
